styles.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Josefin+Sans:wght@100;200;300;400;500;600;700&display=swap');

:root{
  --font-primary: 'Inter', sans-serif;
  --font-secondary: 'Josefin Sans',sans-serif;

  --primary-color: #026CB0;
  --secondary-color: #6a2fec;
  --gradient: linear-gradient(60deg, var(--primary-color)  0%, var(--secondary-color) 100%);

  --text-primary: #1A1A1A;
  --text-primary-light: #808080;

  --text-secondary: #FAFAFA; 

}


/* *******************
   Global styles Start
   ******************* */
body {
  margin:0;
  padding: 0;
}

*{
  color:var(--text-primary);
}

*::first-letter{
  text-transform: capitalize;
}

main{
  margin-bottom: 5rem;
}

body::-webkit-scrollbar {
  width: 0.50rem;
}

body::-webkit-scrollbar-track {
  background: var(--text-primary);
}

body::-webkit-scrollbar-thumb {
  background: var(--gradient);
}
/* *******************
   Global styles End
   ******************* */




h1 {
  font-family: 'Josefin Sans', sans-serif;
  font-weight:300;
  letter-spacing: 2px;
  font-size:3rem;
  color: var(--text-primary);
}

p {
  font-family: 'Inter', sans-serif;
  letter-spacing: 1px;
  font-size:14px;
  color: var(--text-primary-light);
}


.navbar{
}

.navbar ul{
  display: flex;
justify-content: space-evenly;
}

.navbar ul li{
  list-style-type: none;
}

.navbar ul li a{
  text-decoration: none;
  font-family: 'Josefin Sans', sans-serif;
  color: var(--text-secondary);
}

.navbar ul li a span{
  text-decoration: none;
  font-family: 'Josefin Sans', sans-serif;
  color: var(--text-secondary);
}

.navbar ul li a i{
  display: none;
}





header{
  background: var(--gradient);
  margin-top: 0;
  margin-bottom: 0;
}

header h4{
  margin: 0 auto;
  font-family: 'Josefin Sans', sans-serif;
  font-weight: 600;
  letter-spacing: 2px;
  font-size: 1rem;
  color: var(--text-secondary);
}

.TextContainer{
  /* border: 2px solid black; */
display: grid;
grid-template-columns: 10fr 20fr;
align-items: baseline;
padding-top: 2rem;
text-shadow: 0px 0px 20px var(--text-primary);
}


.HeroContainer{
  display: flex;
flex-direction: row-reverse;
justify-content: space-evenly;
align-items: center;
margin: 5rem auto;
}

.HeroText p{
  font-size: 1.25rem;
  margin: 1rem 0;
  font-weight: 400;
  font-family: var(--font-secondary);
}

.HeroText span{
  background: linear-gradient(60deg, var(--primary-color),var(--secondary-color));
   background-clip: text;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -moz-text-fill-color: transparent;
  -webkit-text-fill-color: transparent;
  font-weight: 400;
}

.HeroText h1{
  margin: 0;
}

.HeroImage{
  margin-bottom: 6rem;
}

lottie-player{
  width: 31.25rem;
  height: auto;
}


#CtaPrimary {
  border: 2px solid var(--primary-color);
  width: auto;
  background-color: var(--primary-color);
  color: var(--text-secondary);
  border-radius: 4px;
  padding: 0.7rem;
  font-size: 1rem;
  margin-right: 1rem;
}

#CtaSecondary {
  border: 2px solid var(--primary-color);
  width: auto;
  background-color: var(--text-secondary);
  color: var(--text-primary-light);
  border-radius: 4px;
  padding: 0.7rem;
  font-size: 1rem;
}


/* Remove this later */
.ContentHidden{
  display: none;
}
/* Remove this later */













.waves {
  position:relative;
  width: 100%;
  height:15vh;
  margin-bottom:-7px; /*Fix for safari gap*/
  min-height:100px;
  max-height:150px;
}


/* Animation */

.parallax > use {
  animation: move-forever 25s cubic-bezier(.55,.5,.45,.5)     infinite;
}
.parallax > use:nth-child(1) {
  animation-delay: -2s;
  animation-duration: 7s;
}
.parallax > use:nth-child(2) {
  animation-delay: -3s;
  animation-duration: 10s;
}
.parallax > use:nth-child(3) {
  animation-delay: -4s;
  animation-duration: 13s;
}
.parallax > use:nth-child(4) {
  animation-delay: -5s;
  animation-duration: 20s;
}
@keyframes move-forever {
  0% {
   transform: translate3d(-90px,0,0);
  }
  100% { 
    transform: translate3d(85px,0,0);
  }
}



























/*Shrinking for mobile*/
@media (max-width: 768px) {
  .waves {
    height:40px;
    min-height:40px;
  }
  .content {
    height:30vh;
  }
  h1 {
    font-size:2rem;
  }

  .HeroContainer{
    flex-direction: column;
justify-content: center;
align-items: center;
margin: auto;
}

  lottie-player {
    width: 100%;
    height: auto;
}

.HeroImage {
  margin-bottom: 3rem;
}

.TextContainer{
  display: block;
  padding: 2rem;
text-shadow: 0px 0px 20px var(--text-primary);
}



  .HeroText {
    text-align: center;
}

  .HeroText p {
    font-size: 1rem;
    margin: 0.5rem 0;
}


.navbar-bottom{

  position: fixed;
  bottom: 0;
  
  background-color: var(--text-primary);
  
  width: 100vw;
  left: 0;
  margin-bottom: 0;
  padding-bottom: 0;

  background: linear-gradient(to right, var(--primary-color), var(--secondary-color));

}

.navbar-bottom ul{
  padding-left: 0;  
}




.navbar-bottom li a{
  width: 2rem;
  height: 2rem;
}

.navbar-bottom li a span{
  display: none;
}

.navbar-bottom ul li a i{
  display: inline-block;
  font-size: 1.2rem;
}

.link-text{
  display: none;
}

header h4{
text-align:center;
}

.fas{
  color:var(--text-secondary);
}

.fas:hover{
  color: #D5B9F8;
}

/* Remove this later */
.ContentHidden{
  visibility: hidden;
  display: block;
}
/* Remove this later */


}

